--- a/index.html
+++ b/index.html
@@ -14,19 +14,19 @@
     <div class="container">
         <div class="row">
             <label>Név:</label>
-            <input form-control type="text" id="nevinput">
+            <input form-control type="text" id="nevinput" placeholder="Név">
         </div>
         <div class="row">
             <label>Évszám:</label>
-            <input form-control type="number" id="evszaminput">
+            <input form-control type="number" id="evszaminput" placeholder="Évszám">
         </div>
         <div class="row">
             <label>Ár (Ft):</label>
-            <input form-control type="number" id="arinput">
+            <input form-control type="number" id="arinput" placeholder="Ár">
         </div>
         <div class="row">
             <label>Magasság (cm):</label>
-            <input form-control type="number" id="magassaginput">
+            <input form-control type="number" id="magassaginput" placeholder="Magasság">
         </div>
         <div class="row">
             <button form-control id="gomb">Feltölt</button>
