--- a/index.html
+++ b/index.html
@@ -11,26 +11,41 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="container">
-        <div class="row">
-            <label>Név:</label>
-            <input form-control type="text" id="nevinput" placeholder="Név">
+    <div class="container row">
+        <div class="col-4 col-sm-4 col-md-4 col-lg-4"></div>
+        <div class="col-4 col-sm-4 col-md-4 col-lg-4">
+            <div class="row" id="felso">
+                <label id="darabszam">Művek darabszáma: 0</label>
+                <label id="osszertek">Művek összesített értéke: 0</label>
+            </div>
+            <div class="form-group">
+                <div class="row">
+                    <label>Név:</label>
+                    <input form-control type="text" id="nevinput" placeholder="Név">
+                    <label id="nevhiba"></label>
+                </div>
+                <div class="row">
+                    <label>Évszám:</label>
+                    <input form-control type="number" id="evszaminput" placeholder="Évszám">
+                    <label id="evhiba"></label>
+                </div>
+                <div class="row">
+                    <label>Ár (Ft):</label>
+                    <input form-control type="number" id="arinput" placeholder="Ár">
+                    <label id="arhiba"></label>
+                </div>
+                <div class="row">
+                    <label>Magasság (cm):</label>
+                    <input form-control type="number" id="magassaginput" placeholder="Magasság">
+                    <label id="magassaghiba"></label>
+                </div>
+                <div class="row">
+                    <br>
+                    <button form-control id="gomb" class="btn btn-primary">Feltölt</button>
+                </div>
+            </div>
         </div>
-        <div class="row">
-            <label>Évszám:</label>
-            <input form-control type="number" id="evszaminput" placeholder="Évszám">
-        </div>
-        <div class="row">
-            <label>Ár (Ft):</label>
-            <input form-control type="number" id="arinput" placeholder="Ár">
-        </div>
-        <div class="row">
-            <label>Magasság (cm):</label>
-            <input form-control type="number" id="magassaginput" placeholder="Magasság">
-        </div>
-        <div class="row">
-            <button form-control id="gomb">Feltölt</button>
-        </div>
+        <div class="col-4 col-sm-4 col-md-4 col-lg-4"></div>
     </div>
 </body>
 </html>
